fix ServiceTests